<resources>
    <string name="app_name">MyMoneyApp</string>
    <string name="save">SALVAR</string>
    <string name="hint_money">Dinheiro (R$ 50,00)</string>
    <string name="hint_type">Tipo</string>
    <string name="hint_description">Descrição</string>
    <string name="home">Home</string>
    <string name="earn">Earn</string>
    <string name="spend">Spend</string>
    <string name="graphic">Gráfico</string>
    <string name="delete_message">Deseja excluir esse valor?</string>
    <string name="cancel">Cancelar</string>
    <string name="delete">Excluir</string>
    <string name="add_name_user"> Qual seu nome?</string>
    <string name="user_name">Ex: Ana Luisa</string>
    <string name="txtearn">Ganho</string>
    <string name="txtspend">Despesa</string>
    <string name="earn_percentage">Ganho ( %1$s )</string>
    <string name="spend_percentage">Despesa ( %1$s )</string>
    <string name="statement">Extrato:</string>
    <string name="txt_password_visibility_gone">*****</string>
    <string name="txt_mensage_error_without_money">Você está sem dinheiro</string>
    <string name="txt_mensage_error_occurred">Ops..deu erro! Tente mais tarde.</string>
</resources>