<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".wallet.view.AddStatementActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/app_name"
        app:titleTextColor="@color/md_theme_light_onPrimary"
        android:background="@color/seed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <EditText
            android:id="@+id/et_add_money"
            style="@style/Base.Theme.MyMoneyApp.FormEditText"
            android:hint="@string/hint_money"
            android:inputType="numberDecimal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/autocomplete_add_type"
            style="@style/AutoTextViewForm"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_add_money">

            <AutoCompleteTextView
                android:id="@+id/autoType"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>

        <EditText
            android:id="@+id/et_description"
            style="@style/Base.Theme.MyMoneyApp.FormEditText"
            android:hint="@string/hint_description"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/autocomplete_add_type" />

        <Button
            android:id="@+id/btn_add_statement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:padding="16dp"
            android:text="@string/save"
            android:backgroundTint="@color/seed"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_description" />
    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>